--- a/hojaCSS.css
+++ b/hojaCSS.css
@@ -2,3 +2,7 @@ h1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: red;
 }
+
+.parrafo{
+    color: blue;
+}
